fixing Java 11 compilation issue